# xenon

./: README.md  xenon.cabal
app/: Main.hs
app/Core/Parser/: AST.hs  Core.hs  Location.hs  Parser.hs
app/Core/Parser/Core/: Lexer.hs  Parser.hs
examples/: main.xe
