cabal-version:      2.4
name:               xenon
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
description:        A powerful programming language with object and functional features.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             thomasvergne
maintainer:         thomas.vergne.contact@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable xenon
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Core.Parser.AST
      Core.Parser.Core
        Core.Parser.Core.Lexer
        Core.Parser.Core.Parser
      Core.Parser.Location

    default-extensions:
        ConstraintKinds 
        FlexibleContexts 
    build-depends:    
        base ^>=4.14.3.0
      , parsec
      , diagnose
      , containers
      , semialign
      , these
      , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
